@@ -1,3 +1,7 @@
+2014-10-20  Freddie Chopin  <freddie_chopin@op.pl>
+
+	* libc/time/gmtime_r.c (gmtime_r): Remove dead code.
+
 2014-10-16  Sebastian Huber  <sebastian.huber@embedded-brains.de>
 
 	* libc/unix/getcwd.c (getcwd): Close directory also in case of an error.
